==================================================
Commit Hash: 23bcf1d8b93ef95c79b50d87d142163b305cb155
Author: Niwatori401
Date: Thu Jun 20 00:14:22 2024

Fix compatibility issue with Camera+
Failing to patch external mods is no longer fatal

==================================================
Commit Hash: 78af716972e82e49a489eed037bf524d9c01a688
Author: Niwatori401
Date: Wed Jun 19 23:55:03 2024

Remove file verification program
Update gitignore

==================================================
Commit Hash: 29087a173a7514bd660ee27ded841f088b39cc87
Author: Niwatori401
Date: Wed Jun 19 23:46:58 2024

Add thought defs for new gelatinous levels

==================================================
Commit Hash: 5b10440f34510dda0a5f8562b0806f3da87163d5
Author: Niwatori401
Date: Sun Jun 16 18:05:41 2024

Update credits

==================================================
Commit Hash: 4923ebbd8902875911e665b0ab5e12545d5d902b
Author: Niwatori401
Date: Sun Jun 16 17:58:26 2024

Update perk icons (Thanks Toggle!)

==================================================
Commit Hash: 144a5cc6b8920f48e96d9c4c9ff4a73e35dfe82a
Author: Niwatori401
Date: Mon Apr 15 01:58:36 2024

Fix issue where shamblers would break right click menus

==================================================
Commit Hash: cb189f0cf2d6d8db8376ea2b6059c499f858c267
Author: Niwatori401
Date: Sun Apr 14 02:27:56 2024

Fix error introduced by previous patch

==================================================
Commit Hash: 9f0b07eac3e588656ab3da5f0135a8504703a623
Author: Niwatori401
Date: Sun Apr 14 01:30:33 2024

Fix bug causing shamblers to throw errors

==================================================
Commit Hash: 834140f5995157b51476617e8e82159930883595
Author: Niwatori401
Date: Thu Apr 11 21:29:34 2024

Re-enable patch to display prisoner gaining resistance
Re-enable hoverchair rendering patch
Re-enable start screen patch
Disable two patches regarding shell clothing
